correcting style on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -16,17 +16,20 @@
 
 .refresh {
   color: #a0a3c5;
-  font-family: Inter,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,Helvetica,Arial,sans-serif;
-  font-size: 16px;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    Helvetica, Arial, sans-serif;
+  font-size: 1rem;
   margin-bottom: 20px;
 }
 
 .container {
-  width: 500px;
-  height: 500px;
+  width: 75%;
+  max-width: 500px;
+  max-height: 75%;
   border: 1px solid #282936;
   border-radius: 20px;
   background: #282f3d41;
+  overflow: hidden;
 }
 
 .services {
@@ -37,7 +40,6 @@
 .service-title {
   font-size: 1.5rem;
   color: #f0f0f0;
-  font-weight: 700;
   padding: 15px 20px;
   border-bottom: 1px solid #282936;
   border-radius: 8px;
@@ -54,25 +56,74 @@
 }
 
 .service-name {
-  color: #f0f0f0
+  color: #f0f0f0;
 }
 
 .operational {
-  color: green
+  color: green;
 }
 
 .degraded_performance {
-  color: yellow
+  color: yellow;
 }
 
 .partial_outage {
-  color: orange
+  color: orange;
 }
 
 .major_outage {
-  color: red
+  color: red;
 }
 
 .under_maintenance {
-  color: blue
+  color: blue;
+}
+
+@media only screen and (min-width: 520px) {
+  .services {
+    overflow-y: scroll;
+    max-height: 87%;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  #app {
+    justify-content: flex-start;
+  }
+
+  .container {
+    width: 100%;
+    max-height: none;
+    height: 95%;
+    border-radius: 0;
+  }
+
+  .service-title {
+    font-size: 1.3rem;
+  }
+
+  .service {
+    font-size: 1rem;
+  }
+
+  .refresh {
+    font-size: 0.9rem;
+    margin: 10px;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4f5055;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4f5055b6;
 }
